# api/hospital-wl.openapi.yaml
@@ -16,6 +16,8 @@ tags:
   description: Hospital Waiting List API
 - name: hospitalConditions
   description: Patient conditions and symptoms handled in the hospital
+- name: hospitals
+  description: Hospital details
 
 paths:
   "/waiting-list/{hospitalId}/entries":
@@ -87,6 +89,57 @@ paths:
           description: Hospital with such ID does not exists
         "409":
           description: Entry with the specified id already exists
+  "/hospital":
+    post:
+      tags:
+        - hospitals
+      summary: Saves new hospital definition
+      operationId: createHospital
+      description: Use this method to initialize new hospital in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Hospital"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/HospitalExample"
+        description: Hospital details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored hospital
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Hospital"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/HospitalExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/hospital/{hospitalId}":
+    delete:
+      tags:
+        - hospitals
+      summary: Deletes specific hospital
+      operationId: deleteHospital
+      description: Use this method to delete the specific hospital from the system.
+      parameters:
+        - in: path
+          name: hospitalId
+          description: pass the id of the particular hospital
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Ambulance with such ID does not exist
   "/waiting-list/{hospitalId}/entries/{entryId}":
     get:
       tags:
@@ -258,9 +311,8 @@ components:
             be computed based on condition and hospital settings
         condition:
           $ref: "#/components/schemas/Condition"
-      example:
-        $ref: "#/components/examples/WaitingListEntryExample"
     Condition:
+      type: object
       description: "Describes disease, symptoms, or other reasons of patient   visit"
       required:
         - value
@@ -280,8 +332,29 @@ components:
           type: integer
           format: int32
           example: 20
-      example:
-        $ref: "#/components/examples/ConditionExample"
+    Hospital:
+      type: object
+      required: [ "id", "name", "roomNumber"]
+      properties:
+        id:
+          type: string
+          example: dentist-warenova
+          description: Unique identifier of the hospital
+        name:
+          type: string
+          example: Zubná ambulancia Dr. Warenová
+          description: Human readable display name of the hospital
+        roomNumber:
+          type: string
+          example: 356 - 3.posch
+        waitingList:
+          type: array
+          items:
+            $ref: '#/components/schemas/WaitingListEntry'
+        predefinedConditions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Condition'
   examples:
     WaitingListEntryExample:
       summary: Ľudomír Zlostný waiting
@@ -332,6 +405,53 @@ components:
           value: Nevoľnosť
           code: nausea
           reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+    HospitalExample:
+      summary: Sample hospital
+      description: |
+        Example of GP ambulance with waiting list and predefined conditions
+      value:
+        id: gp-warenova
+        name: Ambulancia všeobecného lekárstva Dr. Warenová
+        roomNumber: 356 - 3.posch
+        waitingList:
+          - id: x321ab3
+            name: Jožko Púčik
+            patientId: 460527-jozef-pucik
+            waitingSince: "2038-12-24T10:05:00.000Z"
+            estimatedStart: "2038-12-24T10:35:00.000Z"
+            estimatedDurationMinutes: 15
+            condition:
+            value: Teploty
+            code: subfebrilia
+            reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+          - id: x321ab4
+            name: Ferdinand Trety
+            patientId: 780907-ferdinand-tre
+            waitingSince: "2038-12-24T10:25:00.000Z"
+            estimatedStart: "2038-12-24T10:50:00.000Z"
+            estimatedDurationMinutes: 25
+            condition:
+            value: Nevoľnosť
+            code: nausea
+            reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+        predefinedConditions:
+          - value: Teploty
+            code: subfebrilia
+            reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+            typicalDurationMinutes: 20
+          - value: Nevoľnosť
+            code: nausea
+            reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+            typicalDurationMinutes: 45
+          - value: Kontrola
+            code: followup
+            typicalDurationMinutes: 15
+          - value: Administratívny úkon
+            code: administration
+            typicalDurationMinutes: 10
+          - value: Odber krvi
+            code: blood-test
+            typicalDurationMinutes: 10
     ConditionsListExample:
       summary: Sample of GP ambulance conditions
       description: |
