# cmd/hospital-api-service/main.go
@@ -7,6 +7,10 @@ import (
     "github.com/gin-gonic/gin"
     "github.com/MartinKacani/hospital-webapi/api"
     "github.com/MartinKacani/hospital-webapi/internal/hospital_wl"
+    "github.com/MartinKacani/hospital-webapi/internal/db_service"
+    "context"
+    "time"
+    "github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -21,10 +25,27 @@ func main() {
     }
     engine := gin.New()
     engine.Use(gin.Recovery())
+    corsMiddleware := cors.New(cors.Config{
+        AllowOrigins:     []string{"*"},
+        AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+        AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+        ExposeHeaders:    []string{""},
+        AllowCredentials: false,
+        MaxAge: 12 * time.Hour,
+    })
+    engine.Use(corsMiddleware)
+    // setup context update  middleware
+    dbService := db_service.NewMongoService[hospital_wl.Hospital](db_service.MongoServiceConfig{})
+    defer dbService.Disconnect(context.Background())
+    engine.Use(func(ctx *gin.Context) {
+        ctx.Set("db_service", dbService)
+        ctx.Next()
+    })
     // request routings
     handleFunctions := &hospital_wl.ApiHandleFunctions{
         HospitalConditionsAPI:  hospital_wl.NewHospitalConditionsApi(),
         HospitalWaitingListAPI: hospital_wl.NewHospitalWaitingListApi(),
+        HospitalsAPI:           hospital_wl.NewHospitalsApi(),
     }
     hospital_wl.NewRouterWithGinEngine(engine, *handleFunctions)
     engine.GET("/openapi", api.HandleOpenApi)
