# internal/hospital_wl/model_hospital.go
@@ -1,0 +1,26 @@
+/*
+ * Waiting List Api
+ *
+ * Hospital Waiting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xkacani@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package hospital_wl
+
+type Hospital struct {
+
+	// Unique identifier of the hospital
+	Id string `json:"id"`
+
+	// Human readable display name of the hospital
+	Name string `json:"name"`
+
+	RoomNumber string `json:"roomNumber"`
+
+	WaitingList []WaitingListEntry `json:"waitingList,omitempty"`
+
+	PredefinedConditions []Condition `json:"predefinedConditions,omitempty"`
+}
